# opencommunity

./: LICENSE  README.md  manage.py  pyproject.toml  pytest.ini
api/: admin.py
api/migrations/: 0001_initial.py  0002_service_status.py  0003_identificationbody.py  0004_identifier.py  0005_auto_20190616_2228.py  0006_auto_20190616_2239.py  0007_auto_20190616_2242.py  0008_auto_20190616_2246.py  0009_auto_20190616_2247.py  0010_auto_20190616_2318.py  0011_program.py  0012_auto_20190617_0002.py
api/models/: address.py  base.py  contact.py  document.py  eligibility.py  identification_body.py  identifier.py  language.py  location.py  organisation.py  program.py  service.py  taxonomy.py
api/v1/serialisers/: contact.py  organisation.py
opencommunity/: admin.py  settings.py  urls.py  wsgi.py
opencommunity/apps/api/: admin.py
opencommunity/apps/api/migrations/: 0001_initial.py  0002_auto_20190615_1208.py
opencommunity/apps/api/models/: accessibility.py  address.py  contact.py  eligibility.py  location.py  organisation.py  program.py  schedule.py  taxonomy.py
opencommunity/apps/api/v1/serialisers/: base.py  contacts.py  organisation.py  service.py
opencommunity/apps/users/migrations/: 0001_initial.py
opencommunity/settings/: base.py
opencommunity/tests/: test_models.py
users/: admin.py
users/migrations/: 0001_initial.py
