[tool.poetry]
name = "opencommunity"
version = "0.1.0"
description = "Open Source API and data service that implements the HSDS"
authors = ["mathewtrivett <matt.trivett@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
django = "^2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
